@@ -1,5 +1,9 @@
 2010-04-24  El Dragon  <thedragon@the-dragons-nest.co.uk>
 
+	* OggFile.cs: Added RemoveTag & RemoveAllTags functions
+
+2010-04-24  El Dragon  <thedragon@the-dragons-nest.co.uk>
+
 	* OggPlayer.cs: Fixed BufferSize & BufferCount property
 	  declarations to return the correct values
 	Changed default number of buffers to 32, up from 16 (Default
